# chatbot_ai_agent

./: README.md
chatbot_agent/: bedrock_chat.ipynb  chatbot.ipynb  pyproject.toml  requirements.txt  tests_chatbot.ipynb
chatbot_agent/.ipynb_checkpoints/: bedrock_chat-checkpoint.ipynb  chatbot-checkpoint.ipynb
chatbot_agent/scripts/: EDA_and_postgresql.ipynb  agent_script.py
chatbot_agent/scripts/agent_info/: ai_original_prompt.txt
chatbot_agent/scripts/agent_tools/: tools.py
chatbot_agent/scripts/plots_output/: cost_month_name_year___2023.csv
chatbot_agent/scripts/utils/: db.py  tool_logger.py
