[project]
name = "chatbot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.10.0",
    "anyio==4.12.1",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.1.0",
    "attrs==25.4.0",
    "babel==2.18.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "boto3>=1.42.86",
    "bracex==2.6",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "ddgs==9.10.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dockerfile-parse==2.0.1",
    "e2b==2.13.2",
    "e2b-code-interpreter==2.4.1",
    "executing==2.2.1",
    "fake-useragent==2.2.0",
    "fastjsonschema==2.21.2",
    "filelock==3.21.2",
    "fonttools==4.61.1",
    "fqdn==1.5.1",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.2",
    "hyperframe==6.1.0",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.13.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-aws>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langgraph-checkpoint-postgres>=3.0.5",
    "lark==1.3.1",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markdownify==1.2.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.2.0",
    "mpmath==1.3.0",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "notebook==7.5.3",
    "notebook-shim==0.2.4",
    "numpy==2.4.2",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.7.0",
    "primp==1.0.0",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pydantic>=2.12.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.3.2",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "send2trash==2.1.0",
    "six==1.17.0",
    "smolagents==1.24.0",
    "socksio==1.0.0",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==4.57.6",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "wcmatch==10.1",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
]
